add new item functionality complete

--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="LpV-gU-0C7" id="qcA-r7-ysX"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="ToDoey" id="Je8-cc-PfY"/>
+                    <navigationItem key="navigationItem" title="ToDoey" id="Je8-cc-PfY">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="VaV-27-Guh">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="LpV-gU-0C7" id="JQn-fV-E2v"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="28g-tI-Qcg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
